feat(auth): login, logout and current user sessions (#10) (#80)
